# he-path-of-the-samurai

./: .env.example  ARCHITECTURE_DIAGRAMS.md  ASTRONOMY_API_FIXED.md  ASTRONOMY_API_SETUP.md  ASTRONOMY_QUICKSTART.md  ASTRONOMY_UI_FIX.md  FRONTEND_COMPLETE.md  FRONTEND_IMPROVEMENTS.md  LARAVEL_IMPROVEMENTS.md  LAUNCH_STATUS.md  LEGACY_MIGRATION_PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  REFACTORING_REPORT.md  Readme.md  SECURITY_AUDIT.md  TESTING_DOCUMENTATION.md  TROUBLESHOOTING.md  docker-compose.yml  fix-osdr-data.ps1  fix-osdr-dedupe.ps1  fix-osdr-simple.ps1  osdr-dedupe.sql  osdr-insert.sql  run_all_tests.ps1  run_all_tests.sh  tmp.env.add  tmp_run.sh
db/: init.sql
db/migrations/: 002_materialized_views.sql
monitoring/dashboards/: iss-tracker-overview.json
monitoring/prometheus/: prometheus.yml
services/pascal-legacy/: Dockerfile  XLSX_EXPORT.md  legacy  (+3 more)
services/rust-iss/: .dockerignore  Cargo.toml  Dockerfile
services/rust-iss/src/: config.rs  main.rs  middleware.rs  routes.rs
services/rust-iss/src/clients/: base_client.rs  iss_client.rs  mod.rs  nasa_client.rs  spacex_client.rs
services/rust-iss/src/domain/: error.rs  iss.rs  mod.rs  models.rs  osdr.rs  space_cache.rs
services/rust-iss/src/domain/models/: tests.rs
services/rust-iss/src/handlers/: health.rs  iss_handler.rs  iss_handlers.rs  mod.rs  osdr_handlers.rs  space_handlers.rs
services/rust-iss/src/middleware/: metrics.rs
services/rust-iss/src/repo/: cache_repo.rs  iss_repo.rs  mod.rs  osdr_repo.rs
services/rust-iss/src/services/: iss_service.rs  iss_service_tests.rs  mod.rs  osdr_service.rs  scheduler.rs  space_service.rs  spacex_service.rs
services/rust-iss/src/utils/: metrics.rs
services/rust-iss/tests/: integration_tests.rs
services/rust-legacy/: Cargo.toml  Dockerfile  entrypoint.sh
services/rust-legacy/src/: main.rs  telemetry.rs
tests/: README.md  performance_tests.ps1  performance_tests.sh
(+62 files in other folders)
