
[package]
name = "rust_iss"
version = "1.0.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }

# Web framework
axum = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }

# Configuration
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }

# Tower middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.3"

# Pin dependencies to avoid edition2024 requirement
[patch.crates-io]
base64ct = { version = "=1.6.0" }
home = { version = "=0.5.9" }

