[package]
name = "legacy_telemetry"
version = "1.0.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# CSV
csv = "1.3"

# Excel generation
rust_xlsxwriter = "0.64"

# Time
chrono = "0.4"

# Random
rand = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
